DavClient: lower code duplication